@@ -35,14 +35,16 @@
 long long _mullonglong(long long ll, long long lr)
 {
   unsigned long long ret = 0ull;
-  unsigned char *l = (unsigned char *)(&ll);
-  unsigned char *r = (unsigned char *)(&lr);
   unsigned char i, j;
 
   for (i = 0; i < sizeof (long long); i++)
     {
+      unsigned char l = ll >> (i * 8);
       for(j = 0; (i + j) < sizeof (long long); j++)
-          ret += (unsigned long long)((unsigned short)(l[i] * r [j])) << ((i + j) * 8);
+        {
+          unsigned char r = lr >> (j * 8);
+          ret += (unsigned long long)((unsigned short)(l * r)) << ((i + j) * 8);
+        }
     }
 
   return(ret);
